# crazycar

./: .gitignore  LICENSE  Pipfile  README.md  notify.py  pyproject.toml  racecar_model_test.pkl  requirements.txt  supervised.npz  test.py
backup/: notify.py
backup/pysim/: agent.py  environment.py  track.py
crazycar/: utils.py
crazycar/agents/: __init__.py  base.py  constants.py  full_agent.py  image_agent.py  sensor_agent.py
crazycar/algos/: __init__.py  base.py  ddpg.py  model.py  sac.py  td3.py
crazycar/algos_tf/: __init__.py  base.py  common.py  ddpg.py  encoder.py  sac.py  td3.py
crazycar/algos_torch/: __init__.py  base.py  common.py  encoder.py  sac.py
crazycar/data/: cyl.urdf  elem0800.urdf  elem600.urdf  plane.urdf  sensor.urdf
crazycar/encoder/: __init__.py  encoder.py
notebooks/: corner.ipynb  debug.ipynb  rewardVisualize.ipynb  test.ipynb
pysim/: __init__.py  agent.py  calibrationcar.py  configs.py  constants.py  crazycar.py  crazycarGymEnv.py  crazycarGymEnv2.py  crazycarGymEnv3.py  crazycarGymEnv4.py  drive.py  enjoy_pybullet_racecar.py  environment.py  hellocar.py  helloworld.py  main.py  maps.py  mydeepq.py  positions.py  racecar_model.pkl  racecar_model_best.pkl  restitution.py  retrain_pybullet_racecar.py  supervised.py  test.py  testControl.py  track.py  train_pybullet_racecar.py  train_worker.py  utils.py
sac_torch/: model.py  sac.py  sac_combine.py  sac_multi.py  test.py  testMulti.py  test_combine.py  test_multi.py  utils.py
td3_tf/: constants.py  policies.py  td3.py  test.py  utils.py
td3_torch/: apex.py  environment.py  policies.py  td3.py  td3_multiagent.py  test.py  utils.py
(+155 files in other folders)
