[tool.poetry]
name = "crazycar"
version = "0.1.0"
description = ""
authors = ["NutOrbit <nutorbitx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
astor = "0.8.1"
atari-py = "0.2.6"
blessings = "1.7"
cachetools = "4.0.0"
certifi = "2022.12.7"
cffi = "1.14.0"
chardet = "3.0.4"
Click = "7.0"
cloudpickle = "1.2.2"
cpprb = "8.3.2"
cycler = "0.10.0"
Cython = "0.29.14"
decorator = "4.4.1"
future = "0.18.2"
gast = "0.2.2"
glfw = "1.10.1"
google-auth = "1.11.0"
google-auth-oauthlib = "0.4.1"
google-pasta = "0.1.8"
gpustat = "0.6.0"
grpcio = "1.26.0"
gym = "0.15.6"
h5py = "2.10.0"
idna = "2.8"
imageio = "2.6.1"
Keras-Applications = "1.0.8"
Keras-Preprocessing = "1.1.0"
kiwisolver = "1.1.0"
lockfile = "0.12.2"
Markdown = "3.1.1"
matplotlib = "3.1.3"
networkx = "2.4"
numpy = "1.18.1"
nvidia-ml-py3 = "7.352.0"
oauthlib = "3.1.0"
olefile = "0.46"
opt-einsum = "3.1.0"
Pillow = "7.0.0"
protobuf = "3.18.3"
psutil = "5.6.7"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pybullet = "2.5.8"
pycparser = "2.19"
pygame = "1.9.6"
pyglet = "1.4.10"
pyparsing = "2.4.6"
python-dateutil = "2.8.1"
PyWavelets = "1.1.1"
PyYAML = "5.3"
requests = "2.22.0"
requests-oauthlib = "1.3.0"
rsa = "4.0"
scikit-image = "0.16.2"
scipy = "1.4.1"
six = "1.14.0"
tensorboard = "2.0.2"
tensorflow-estimator = "2.0.1"
termcolor = "1.1.0"
tqdm = "4.42.1"
urllib3 = "1.25.8"
Werkzeug = "0.16.1"
wincertstore = "0.2"
wrapt = "1.11.2"
jupyterlab = "^2.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
